Removed compilation flag for debug, increased stack size for module

--- a/src/modules/ob_manual_control/CMakeLists.txt
+++ b/src/modules/ob_manual_control/CMakeLists.txt
@@ -35,7 +35,7 @@
 px4_add_module(
 	MODULE modules__ob_manual_control
 	MAIN ob_manual_control
-	COMPILE_FLAGS	-O0
+	#COMPILE_FLAGS	-O0
 	SRCS
 		OBManualControl.cpp
 	DEPENDS
