--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -38,8 +38,9 @@ px4_add_romfs_files(
 	1000_rc_fw_easystar.hil
 	1001_rc_quad_x.hil
 	1002_standard_vtol.hil
+	1003_rc_hex_x.hil
 	1100_rc_quad_x_sih.hil
-	
+
 	# [2000, 2999] Standard planes"
 	2100_standard_plane
 	2105_maja
@@ -141,7 +142,7 @@ px4_add_romfs_files(
 	15001_coax_heli
 
 	16001_helicopter
-	
+
 	24001_dodeca_cox
 
 	50000_generic_ground_vehicle
